# cocotola

./: .gitignore  BUILD  Makefile  README.md  WORKSPACE  cloudbuild.yaml  cocotola.code-workspace  go.mod  go.sum  go.work  go.work.sum  go_repositories.bzl  main.go
cocotola-api/: BUILD.bazel  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
cocotola-api/docs/: BUILD.bazel
cocotola-api/scripts/test/: drop.sh
cocotola-api/src/: BUILD.bazel  main.go
cocotola-api/src/app/config/: BUILD.bazel  config.go  local.yml  production.yml
cocotola-api/src/app/controller/: BUILD.bazel  app_router.go  audio_handler.go  audio_handler_test.go  job_handler.go  job_router.go  private_workbook_handler.go  problem_handler.go  recordbook_handler.go  stat_handler.go  statistics_handler.go
cocotola-api/src/app/domain/: BUILD.bazel  audio_model.go  audio_model_test.go  guest_model.go  lang.go  lang_test.go  problem_model.go  problem_repository.go  problem_type.go  rbac.go  stat_model.go  student_model.go  study_result.go  study_type.go  system_student_model.go  workbook_model.go  workbook_repository.go
cocotola-api/src/app/gateway/: BUILD.bazel  csv_reader.go  db_test.go  gateway_test.go  init.go  master_data.go  problem_quota_handler.go  problem_type_repository.go  recordbook_repository.go  repository_factory.go  stat_repository.go  stat_repository_test.go  study_record_repository.go  study_record_repository_test.go  study_stat_repository.go  study_type_repository.go  synthesizer_client.go  transaction.go  user_quota_repository.go  workbook_repository.go  workbook_repository_test.go
cocotola-api/src/app/service/: BUILD.bazel  app_properties.go  audio.go  guest_student.go  problem.go  problem_iterrator.go  problem_observer.go  problem_processor.go  problem_quota_handler.go  problem_repository.go  problem_repository_test.go  problem_type_repository.go  processor_factory.go  recordbook.go  recordbook_repository.go  repository_factory.go  service_test.go  stat.go  stat_repository.go  student.go  student_test.go  study_observer.go  study_record_repository.go  system_student.go  (+6 more)
cocotola-api/src/data/: BUILD.bazel  data.go
cocotola-api/src/docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
cocotola-api/src/proto/: BUILD.bazel
cocotola-api/src/sqls/: BUILD.bazel  sql.go
cocotola-api/tools/import1/: BUILD.bazel  main.go
cocotola-api/tools/import2/: BUILD.bazel  main.go
cocotola-api/tools/open_telemetry/: BUILD.bazel  main.go
cocotola-api/tools/tatoeba_import_eng/: BUILD.bazel  main.go
cocotola-synthesizer-api/src/: BUILD.bazel  main.go
cocotola-synthesizer-api/src/config/: BUILD.bazel  config.go  config_tracer.go  production.yml
cocotola-synthesizer-api/src/controller/: BUILD.bazel  admin_handler.go  app_router.go  user_handler.go
cocotola-synthesizer-api/src/docs/: BUILD.bazel  docs.go
cocotola-synthesizer-api/src/domain/: BUILD.bazel  audio_model.go  lang.go
cocotola-synthesizer-api/src/gateway/: BUILD.bazel  audio_repository.go  audio_repository_test.go  db_test.go  gateway_test.go  init.go  repository_factory.go  synthesizer_client.go  transaction.go
cocotola-synthesizer-api/src/service/: BUILD.bazel  audio.go  audio_repository.go  synthesizer_client.go  transaction.go
cocotola-synthesizer-api/src/sqls/: BUILD.bazel
cocotola-synthesizer-api/src/usecase/: BUILD.bazel  admin_usecase.go  user_usecase.go
cocotola-tatoeba-api/src/: BUILD.bazel  main.go
cocotola-tatoeba-api/src/config/: BUILD.bazel  config.go
cocotola-tatoeba-api/src/controller/: BUILD.bazel  admin_handler.go  app_router.go  user_handler.go
cocotola-tatoeba-api/src/docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
cocotola-tatoeba-api/src/domain/: BUILD.bazel  english.go  lang.go
cocotola-tatoeba-api/src/gateway/: BUILD.bazel  gateway_test.go  init.go  repository_factory.go  tatoeba_link_iterator.go  tatoeba_link_repository.go  tatoeba_sentence_iterator.go  tatoeba_sentence_repository.go  tatoeba_sentence_repository_test.go  transaction.go
cocotola-tatoeba-api/src/service/: BUILD.bazel  tatoeba_link_repository.go  tatoeba_sentence_repository.go
cocotola-tatoeba-api/src/sqls/: BUILD.bazel
cocotola-tatoeba-api/src/usecase/: BUILD.bazel  admin_usecase.go  user_usecase.go
cocotola-tatoeba-api/tools/tatoeba_import_eng/: BUILD.bazel  main.go
cocotola-tatoeba-api/tools/tatoeba_import_jpn/: BUILD.bazel  main.go
cocotola-tatoeba-api/tools/tatoeba_import_link/: BUILD.bazel  main.go
cocotola-translator-api/: .air.toml  BUILD.bazel  Dockerfile  Makefile  go.mod  go.sum  main.go
cocotola-translator-api/config/: config.go
cocotola-translator-api/docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
cocotola-translator-api/src/: BUILD.bazel  main.go
cocotola-translator-api/src/config/: BUILD.bazel  config.go  config_db.go  fun.go  fun_test.go
cocotola-translator-api/src/controller/: BUILD.bazel  admin_handler.go  admin_handler_test.go  admin_server.go  app_router.go  user_handler.go  user_server.go
cocotola-translator-api/src/docs/: BUILD.bazel  docs.go  swagger.json  swagger.yaml
cocotola-translator-api/src/domain/: BUILD.bazel  custom_translation_repository.go  lang.go  translation.go
cocotola-translator-api/src/gateway/: BUILD.bazel  azure_translation_client.go  azure_translation_repository.go  azure_translator.go  azure_translator_test.go  custom_translation_repository.go  custom_translation_repository_test.go  db_test.go  gateway_test.go  init.go  repository_factory.go  test.db  transaction.go
cocotola-translator-api/src/service/: BUILD.bazel  azure_translation_client.go  azure_translation_repository.go  custom_translation_repository.go  repository_factory.go
cocotola-translator-api/src/sqls/: BUILD.bazel
cocotola-translator-api/src/usecase/: BUILD.bazel  admin_usecase.go  admin_usecase_test.go  service_test.go  usecase_test.go  user_usecase.go  user_usecase_test.go
lib/domain/: BUILD.bazel  ulid.go
lib/factory/: BUILD.bazel  init.go  init_test.go
lib/proto/: BUILD.bazel
src/: BUILD.bazel  main.go
src/uuid/: BUILD.bazel  uuid_test.go
(+509 files in other folders)
