load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cocotola-api_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola/cocotola-api",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cocotola-api",
    embed = [":cocotola-api_lib"],
    visibility = ["//visibility:public"],
)
