load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cocotola-translator-api_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola/cocotola-translator-api",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/gateway",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "cocotola-translator-api",
    embed = [":cocotola-translator-api_lib"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "cocotola-translator-api_image",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola/cocotola-translator-api",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/gateway",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_sirupsen_logrus//:logrus",
        "@org_golang_x_sync//errgroup",
    ],
)
