load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola/src",
    visibility = ["//visibility:private"],
    deps = ["//src/uuid"],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "go_image",
    srcs = ["main.go"],
    importpath = "github.com/pecolynx/foo/src",
    visibility = ["//visibility:private"],
    deps = ["//src/uuid"],
)
