load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola/cocotola-api/src",
    visibility = ["//visibility:private"],
    deps = [
        "//cocotola-api/src/app/config",
        "//cocotola-api/src/app/controller",
        "//cocotola-api/src/app/domain",
        "//cocotola-api/src/app/gateway",
        "//cocotola-api/src/app/service",
        "//cocotola-api/src/app/usecase/job",
        "//cocotola-api/src/app/usecase/student",
        "//cocotola-api/src/auth/gateway",
        "//cocotola-api/src/auth/service",
        "//cocotola-api/src/auth/usecase",
        "//cocotola-api/src/data/english_sentence",
        "//cocotola-api/src/data/english_word",
        "//cocotola-api/src/docs",
        "//cocotola-api/src/job/gateway",
        "//cocotola-api/src/job/service",
        "//cocotola-api/src/plugin/common/gateway",
        "//cocotola-api/src/plugin/common/service",
        "//cocotola-api/src/plugin/english/domain",
        "//cocotola-api/src/plugin/english/gateway",
        "//cocotola-api/src/plugin/english/service",
        "//cocotola-api/src/sqls",
        "//cocotola-api/src/user/domain",
        "//cocotola-api/src/user/gateway",
        "//cocotola-api/src/user/service",
        "//lib/config",
        "//lib/errors",
        "//lib/gateway",
        "//lib/log",
        "//lib/timeutil",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_go_co_op_gocron//:gocron",
        "@com_github_golang_jwt_jwt//:jwt",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@io_gorm_gorm//:gorm",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)
