load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "src_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola/cocotola-tatoeba-api/src",
    visibility = ["//visibility:private"],
    deps = [
        "//cocotola-tatoeba-api/src/config",
        "//cocotola-tatoeba-api/src/controller",
        "//cocotola-tatoeba-api/src/docs",
        "//cocotola-tatoeba-api/src/gateway",
        "//cocotola-tatoeba-api/src/service",
        "//cocotola-tatoeba-api/src/sqls",
        "//cocotola-tatoeba-api/src/usecase",
        "//lib/config",
        "//lib/errors",
        "//lib/gateway",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@io_gorm_gorm//:gorm",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "src",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)
