load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "factory",
    srcs = ["init.go"],
    importpath = "github.com/kujilabo/cocotola/lib/factory",
    visibility = ["//visibility:public"],
)

go_test(
    name = "factory_test",
    srcs = ["init_test.go"],
    deps = [":factory"],
)
