load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "uuid",
    srcs = ["uuid.go"],
    importpath = "github.com/kujilabo/cocotola/src/uuid",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_uuid//:uuid"],
)

go_test(
    name = "uuid_test",
    srcs = ["uuid_test.go"],
    deps = ["@com_github_stretchr_testify//assert"],
)
