load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sqls",
    srcs = ["sqls.go"],
    embedsrcs = [
        "mysql/2020050101_create_organization.up.sql",
        "mysql/2020050102_create_app_user.up.sql",
        "mysql/2020050103_create_user_role.up.sql",
        "mysql/2020050104_create_space.up.sql",
        "mysql/2020050105_create_app_user_group.up.sql",
        "mysql/2020050106_create_group_user.up.sql",
        "mysql/2020050107_create_problem_type.up.sql",
        "mysql/2020050108_create_user_space.up.sql",
        "mysql/2020050203_create_workbook.up.sql",
        "mysql/2020050301_create_english_sentence_problem.up.sql",
        "mysql/2020050302_create_english_phrase_problem.up.sql",
        "mysql/2020050303_create_english_word_problem.up.sql",
        "mysql/2020050601_create_study_type.up.sql",
        "mysql/2020050602_create_recordbook.up.sql",
        "mysql/2020060101_insert_organization.up.sql",
        "mysql/2020060102_insert_app_user.up.sql",
        "mysql/2020060103_insert_problem_type.up.sql",
        "mysql/2020060104_insert_study_type.up.sql",
        "mysql/2020080105_create_word_status.up.sql",
        "mysql/2020080106_create_base_word.up.sql",
        "mysql/2020080107_create_quota_limit.up.sql",
        "mysql/2020080109_create_user_workbook.up.sql",
        "mysql/2020080110_create_template_problem.up.sql",
        "mysql/2020080113_create_user_quota.up.sql",
        "sqlite3/2020050101_create_organization.up.sql",
        "sqlite3/2020050102_create_app_user.up.sql",
        "sqlite3/2020050103_create_user_role.up.sql",
        "sqlite3/2020050104_create_space.up.sql",
        "sqlite3/2020050105_create_app_user_group.up.sql",
        "sqlite3/2020050106_create_group_user.up.sql",
        "sqlite3/2020050107_create_problem_type.up.sql",
        "sqlite3/2020050108_create_user_space.up.sql",
        "sqlite3/2020050203_create_workbook.up.sql",
        "sqlite3/2020050301_create_english_sentence_problem.up.sql",
        "sqlite3/2020050302_create_english_phrase_problem.up.sql",
        "sqlite3/2020050303_create_english_word_problem.up.sql",
        "sqlite3/2020050601_create_study_type.up.sql",
        "sqlite3/2020050602_create_recordbook.up.sql",
        "sqlite3/2020060101_insert_organization.up.sql",
        "sqlite3/2020060102_insert_app_user.up.sql",
        "sqlite3/2020060103_insert_problem_type.up.sql",
        "sqlite3/2020060104_insert_study_type.up.sql",
        "sqlite3/2020080105_create_word_status.up.sql",
        "sqlite3/2020080106_create_base_word.up.sql",
        "sqlite3/2020080107_create_quota_limit.up.sql",
        "sqlite3/2020080109_create_user_workbook.up.sql",
    ],
    importpath = "github.com/kujilabo/cocotola/cocotola-api/src/sqls",
    visibility = ["//visibility:public"],
)
