load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "import1_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola/cocotola-api/tools/import1",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "import1",
    embed = [":import1_lib"],
    visibility = ["//visibility:public"],
)
