load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "open_telemetry_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola/cocotola-api/tools/open_telemetry",
    visibility = ["//visibility:private"],
    deps = [
        "//cocotola-api/src/app/config",
        "//cocotola-api/src/plugin/common/gateway",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel//semconv/v1.4.0:v1_4_0",
        "@io_opentelemetry_go_otel_exporters_jaeger//:jaeger",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)

go_binary(
    name = "open_telemetry",
    embed = [":open_telemetry_lib"],
    visibility = ["//visibility:public"],
)
