load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gateway",
    srcs = [
        "audio_repository.go",
        "init.go",
        "repository_factory.go",
        "synthesizer_client.go",
    ],
    importpath = "github.com/kujilabo/cocotola/cocotola-synthesizer-api/src/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-synthesizer-api/src/domain",
        "//cocotola-synthesizer-api/src/service",
        "//lib/errors",
        "@io_gorm_gorm//:gorm",
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
        "@io_opentelemetry_go_otel//:otel",
    ],
)

go_test(
    name = "gateway_test",
    srcs = [
        "audio_repository_test.go",
        "db_test.go",
        "gateway_test.go",
    ],
    deps = [
        ":gateway",
        "//cocotola-synthesizer-api/src/service",
        "//cocotola-synthesizer-api/src/sqls",
        "//test-lib/gateway",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_stretchr_testify//require",
        "@io_gorm_gorm//:gorm",
    ],
)
