load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "usecase",
    srcs = [
        "admin_usecase.go",
        "user_usecase.go",
    ],
    importpath = "github.com/kujilabo/cocotola/cocotola-synthesizer-api/src/usecase",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-synthesizer-api/src/domain",
        "//cocotola-synthesizer-api/src/service",
        "//lib/errors",
        "@io_gorm_gorm//:gorm",
    ],
)
