load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "controller",
    srcs = [
        "admin_handler.go",
        "app_router.go",
        "user_handler.go",
    ],
    importpath = "github.com/kujilabo/cocotola/cocotola-tatoeba-api/src/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//cocotola-tatoeba-api/src/config",
        "//cocotola-tatoeba-api/src/controller/converter",
        "//cocotola-tatoeba-api/src/controller/entity",
        "//cocotola-tatoeba-api/src/controller/helper",
        "//cocotola-tatoeba-api/src/gateway",
        "//cocotola-tatoeba-api/src/service",
        "//cocotola-tatoeba-api/src/usecase",
        "//lib/controller/helper",
        "//lib/controller/middleware",
        "//lib/domain",
        "//lib/errors",
        "//lib/log",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_onrik_logrus//gin",
        "@io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin//:otelgin",
    ],
)
