load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "domain",
    srcs = [
        "english.go",
        "init.go",
        "lang.go",
    ],
    importpath = "github.com/kujilabo/cocotola/cocotola-tatoeba-api/src/domain",
    visibility = ["//visibility:public"],
    deps = ["//lib/errors"],
)
