load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tatoeba_import_link_lib",
    srcs = ["main.go"],
    importpath = "github.com/kujilabo/cocotola/cocotola-tatoeba-api/tools/tatoeba_import_link",
    visibility = ["//visibility:private"],
    deps = ["//cocotola-tatoeba-api/src/config"],
)

go_binary(
    name = "tatoeba_import_link",
    embed = [":tatoeba_import_link_lib"],
    visibility = ["//visibility:public"],
)
